[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Dialog Box/9patch_dialog.png" type="Texture" id=1]
[ext_resource path="res://UI/Dialog Box/courbd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Dialog Box/Dialog_Player.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.2
step = 0.04
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 60, -0.25, 0, 0.25, 0, 202, -0.25, 0, 0.25, 0, 355, -0.25, 0, 0.25, 0, 508, -0.25, 0, 0.25, 0, 661, -0.25, 0, 0.25, 0, 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 60, -0.25, 0, 0.25, 0, 89, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0, 168, -0.25, 0, 0.25, 0, 206, -0.25, 0, 0.25, 0, 191, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 290, -0.25, 0, 0.25, 0, 220, -0.25, 0, 0.25, 0, 152, -0.25, 0, 0.25, 0, 74, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 294, -0.25, 0, 0.25, 0, 274, -0.25, 0, 0.25, 0, 254, -0.25, 0, 0.25, 0, 234, -0.25, 0, 0.25, 0, 215, -0.25, 0, 0.25, 0, 222, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2 )
}

[node name="Dialog_Player" type="Node2D"]
script = ExtResource( 3 )

[node name="DialogBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_NinePatchRect" type="NinePatchRect" parent="DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 290.0
margin_top = 294.0
margin_right = 350.0
margin_bottom = 354.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DialogBox/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 24.0
margin_right = -42.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogBox/Body_NinePatchRect/MarginContainer"]
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/Body_NinePatchRect"]
autoplay = "Open"
anims/Open = SubResource( 2 )

[connection signal="animation_finished" from="DialogBox/Body_NinePatchRect/AnimationPlayer" to="." method="_on_animation_finished"]
